--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 	<div class="menu-main-menu-container">
 		<ul id="top-menu" class="menu">
 			<li id="menu-item-27" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-5 current_page_item menu-item-27"><a href="index.html" aria-current="page">AI Security 2019 Program</a></li>
-			<li id="menu-item-26" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-26"><a href="https://clksjx.github.io/committees">Committees</a></li>
-			<li id="menu-item-32" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-32"><a href="https://clksjx.github.io/speakers">Speakers</a></li>
-			<li id="menu-item-213" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-213"><a href="https://clksjx.github.io/program">Program</a></li>
+			<li id="menu-item-26" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-26"><a href="https://ai-security-2019-program.github.io/committees">Committees</a></li>
+			<li id="menu-item-32" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-32"><a href="https://ai-security-2019-program.github.io/speakers">Speakers</a></li>
+			<li id="menu-item-213" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-213"><a href="https://ai-security-2019-program.github.io/program">Program</a></li>
 			<!-- ckj  -->
 		</ul>
 	</div>
