--- a/committees.html
+++ b/committees.html
@@ -97,7 +97,8 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 
 		
 		<div class="site-branding-text">
-							<h1 class="site-title"><a href="index.html" rel="home">AI Security 2019 Program</a></h1>
+		
+							<p class="site-title"><a href="https://ai-security-2019-program.github.io/index" rel="home">AI Security 2019 Program</a></p>
 							<p class="site-description">17 October 2019, Nanyang Technological University, Singapore</p>
 							<!-- ckj  -->
 					</div><!-- .site-branding-text -->
