--- a/speakers.html
+++ b/speakers.html
@@ -6,7 +6,10 @@
 <link rel="profile" href="http://gmpg.org/xfn/11">
 
 <script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
-<title>Speakers &#8211; Workshop on Program Verification and Cyber Security 2019</title>
+
+<title>AI Security 2019 Program &#8211; 17 October, 2019, Nanyang Technological University, Singapore</title>
+<!-- ckj  -->
+
 <link rel='dns-prefetch' href='https://s0.wp.com/' />
 <link rel='dns-prefetch' href='https://fonts.googleapis.com/' />
 <link rel='dns-prefetch' href='https://s.w.org/' />
@@ -94,9 +97,9 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 
 		
 		<div class="site-branding-text">
-							<p class="site-title"><a href="https://clksjx.github.io/index" rel="home">Workshop on Program Verification and Cyber Security 2019</a></p>
-			
-							<p class="site-description">2nd August, 2019, Nanyang Technological University, Singapore</p>
+							<p class="site-title"><a href="https://ai-security-2019-program.github.io/index" rel="home">AI Security 2019 Program</a></p>
+							<p class="site-description">17 October 2019, Nanyang Technological University, Singapore</p>
+							<!-- ckj  -->
 					</div><!-- .site-branding-text -->
 
 		
