--- a/program.html
+++ b/program.html
@@ -97,8 +97,6 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 
 		
 		<div class="site-branding-text">
-							<h1 class="site-title"><a href="index.html" rel="home">AI Security 2019 Program</a></h1>
-							<p class="site-description">17 October 2019, Nanyang Technological University, Singapore</p>
 							
 							<p class="site-title"><a href="https://ai-security-2019-program.github.io/index" rel="home">AI Security 2019 Program</a></p>
 							<p class="site-description">17 October 2019, Nanyang Technological University, Singapore</p>
@@ -229,6 +227,12 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 
 
 		</div><!-- #content -->
+
+<script type='text/javascript'>
+/* <![CDATA[ */
+var twentyseventeenScreenReaderText = {"quote":"<svg class=\"icon icon-quote-right\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-quote-right\" xlink:href=\"#icon-quote-right\"><\/use> <\/svg>","expand":"Expand child menu","collapse":"Collapse child menu","icon":"<svg class=\"icon icon-angle-down\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-down\" xlink:href=\"#icon-angle-down\"><\/use> <span class=\"svg-fallback icon-angle-down\"><\/span><\/svg>"};
+/* ]]> */
+</script>
 
 </body>
 </html>
