--- a/speakers.html
+++ b/speakers.html
@@ -6,10 +6,7 @@
 <link rel="profile" href="http://gmpg.org/xfn/11">
 
 <script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
-
-<title>AI Security 2019 Program &#8211; 17 October, 2019, Nanyang Technological University, Singapore</title>
-<!-- ckj  -->
-
+<title>Speakers &#8211; Workshop on Program Verification and Cyber Security 2019</title>
 <link rel='dns-prefetch' href='https://s0.wp.com/' />
 <link rel='dns-prefetch' href='https://fonts.googleapis.com/' />
 <link rel='dns-prefetch' href='https://s.w.org/' />
@@ -97,9 +94,9 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 
 		
 		<div class="site-branding-text">
-							<p class="site-title"><a href="https://ai-security-2019-program.github.io/index" rel="home">AI Security 2019 Program</a></p>
-							<p class="site-description">17 October 2019, Nanyang Technological University, Singapore</p>
-							<!-- ckj  -->
+							<p class="site-title"><a href="https://www.pvcs2019.org/" rel="home">Workshop on Program Verification and Cyber Security 2019</a></p>
+			
+							<p class="site-description">2nd August, 2019, Nanyang Technological University, Singapore</p>
 					</div><!-- .site-branding-text -->
 
 		
@@ -114,11 +111,12 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 	<button class="menu-toggle" aria-controls="top-menu" aria-expanded="false">
 		<svg class="icon icon-bars" aria-hidden="true" role="img"> <use href="#icon-bars" xlink:href="#icon-bars"></use> </svg><svg class="icon icon-close" aria-hidden="true" role="img"> <use href="#icon-close" xlink:href="#icon-close"></use> </svg>Menu	</button>
 
-	<div class="menu-main-menu-container"><ul id="top-menu" class="menu"><li id="menu-item-27" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-27"><a href="https://ai-security-2019-program.github.io/index">Welcome to PVCS 2019</a></li>
-<li id="menu-item-26" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-26"><a href="https://ai-security-2019-program.github.io/committees">Committees</a></li>
+	<div class="menu-main-menu-container"><ul id="top-menu" class="menu"><li id="menu-item-27" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-27"><a href="https://www.pvcs2019.org/">Welcome to PVCS 2019</a></li>
+<li id="menu-item-26" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-26"><a href="https://www.pvcs2019.org/committees/">Committees</a></li>
 <li id="menu-item-32" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-30 current_page_item menu-item-32"><a href="speakers.html" aria-current="page">Speakers</a></li>
-<li id="menu-item-213" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-213"><a href="https://ai-security-2019-program.github.io/program">Program</a></li>
-
+<li id="menu-item-213" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-213"><a href="https://www.pvcs2019.org/program/">Program</a></li>
+<li id="menu-item-55" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-55"><a href="https://www.pvcs2019.org/registration/">Registration</a></li>
+<li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="https://www.pvcs2019.org/contact-us/">Contact Us</a></li>
 </ul></div>
 	</nav><!-- #site-navigation -->
 				</div><!-- .wrap -->
