--- a/committees.html
+++ b/committees.html
@@ -6,7 +6,10 @@
 <link rel="profile" href="http://gmpg.org/xfn/11">
 
 <script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
-<title>Committees &#8211; Workshop on Program Verification and Cyber Security 2019</title>
+
+<title>AI Security 2019 Program &#8211; 17 October, 2019, Nanyang Technological University, Singapore</title>
+<!-- ckj  -->
+
 <link rel='dns-prefetch' href='https://s0.wp.com/' />
 <link rel='dns-prefetch' href='https://fonts.googleapis.com/' />
 <link rel='dns-prefetch' href='https://s.w.org/' />
@@ -94,9 +97,10 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 
 		
 		<div class="site-branding-text">
-							<p class="site-title"><a href="https://www.pvcs2019.org/" rel="home">Workshop on Program Verification and Cyber Security 2019</a></p>
-			
-							<p class="site-description">2nd August, 2019, Nanyang Technological University, Singapore</p>
+		
+							<p class="site-title"><a href="https://ai-security-2019-program.github.io/index" rel="home">AI Security 2019 Program</a></p>
+							<p class="site-description">17 October 2019, Nanyang Technological University, Singapore</p>
+							<!-- ckj  -->
 					</div><!-- .site-branding-text -->
 
 		
@@ -111,12 +115,11 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 	<button class="menu-toggle" aria-controls="top-menu" aria-expanded="false">
 		<svg class="icon icon-bars" aria-hidden="true" role="img"> <use href="#icon-bars" xlink:href="#icon-bars"></use> </svg><svg class="icon icon-close" aria-hidden="true" role="img"> <use href="#icon-close" xlink:href="#icon-close"></use> </svg>Menu	</button>
 
-	<div class="menu-main-menu-container"><ul id="top-menu" class="menu"><li id="menu-item-27" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-27"><a href="https://www.pvcs2019.org/">Welcome to PVCS 2019</a></li>
+	<div class="menu-main-menu-container"><ul id="top-menu" class="menu"><li id="menu-item-27" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-27"><a href="https://ai-security-2019-program.github.io/index">AI Security 2019 Program</a></li>
 <li id="menu-item-26" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-12 current_page_item menu-item-26"><a href="committees.html" aria-current="page">Committees</a></li>
-<li id="menu-item-32" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-32"><a href="https://www.pvcs2019.org/speakers/">Speakers</a></li>
-<li id="menu-item-213" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-213"><a href="https://www.pvcs2019.org/program/">Program</a></li>
-<li id="menu-item-55" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-55"><a href="https://www.pvcs2019.org/registration/">Registration</a></li>
-<li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="https://www.pvcs2019.org/contact-us/">Contact Us</a></li>
+<li id="menu-item-32" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-32"><a href="https://ai-security-2019-program.github.io/speakers">Speakers</a></li>
+<li id="menu-item-213" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-213"><a href="https://ai-security-2019-program.github.io/program">Program</a></li>
+<!-- ckj  -->
 </ul></div>
 	</nav><!-- #site-navigation -->
 				</div><!-- .wrap -->
@@ -208,15 +211,11 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 
 		<footer id="colophon" class="site-footer" role="contentinfo">
 			<div class="wrap">
-				
-<div class="site-info">
-		<a href="https://wordpress.org/" class="imprint">
-		Proudly powered by WordPress	</a>
-</div><!-- .site-info -->
 			</div><!-- .wrap -->
 		</footer><!-- #colophon -->
 	</div><!-- .site-content-contain -->
 </div><!-- #page -->
+
 <script type='text/javascript' src='https://c0.wp.com/c/5.2.3/wp-includes/js/dist/vendor/wp-polyfill.min.js'></script>
 <script type='text/javascript'>
 ( 'fetch' in window ) || document.write( '<script src="https://www.pvcs2019.org/wp-includes/js/dist/vendor/wp-polyfill-fetch.min.js?ver=3.0.0"></scr' + 'ipt>' );( document.contains ) || document.write( '<script src="https://www.pvcs2019.org/wp-includes/js/dist/vendor/wp-polyfill-node-contains.min.js?ver=3.26.0-0"></scr' + 'ipt>' );( window.FormData && window.FormData.prototype.keys ) || document.write( '<script src="https://www.pvcs2019.org/wp-includes/js/dist/vendor/wp-polyfill-formdata.min.js?ver=3.0.12"></scr' + 'ipt>' );( Element.prototype.matches && Element.prototype.closest ) || document.write( '<script src="https://www.pvcs2019.org/wp-includes/js/dist/vendor/wp-polyfill-element-closest.min.js?ver=2.0.2"></scr' + 'ipt>' );
