--- a/speakers.html
+++ b/speakers.html
@@ -114,7 +114,7 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 	<button class="menu-toggle" aria-controls="top-menu" aria-expanded="false">
 		<svg class="icon icon-bars" aria-hidden="true" role="img"> <use href="#icon-bars" xlink:href="#icon-bars"></use> </svg><svg class="icon icon-close" aria-hidden="true" role="img"> <use href="#icon-close" xlink:href="#icon-close"></use> </svg>Menu	</button>
 
-	<div class="menu-main-menu-container"><ul id="top-menu" class="menu"><li id="menu-item-27" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-27"><a href="https://ai-security-2019-program.github.io/index">Welcome to PVCS 2019</a></li>
+	<div class="menu-main-menu-container"><ul id="top-menu" class="menu"><li id="menu-item-27" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-27"><a href="https://ai-security-2019-program.github.io/index">AI Security 2019 Program</a></li>
 <li id="menu-item-26" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-26"><a href="https://ai-security-2019-program.github.io/committees">Committees</a></li>
 <li id="menu-item-32" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-30 current_page_item menu-item-32"><a href="speakers.html" aria-current="page">Speakers</a></li>
 <li id="menu-item-213" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-213"><a href="https://ai-security-2019-program.github.io/program">Program</a></li>
