--- a/program.html
+++ b/program.html
@@ -170,8 +170,12 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 <td>Generic Black-Box End-to-End Attack Against State of the Art API Call Based Malware Classifiers <br /> <small>Ishai Rosenberg </small></td>
 </tr>
 <tr>
-<td width="30%">11:20 &#8211; 11:50</td>
+<td width="30%">11:10 &#8211; 11:40</td>
 <td> Quantitative Analysis for Recurrent Neural Network<br /> <small>Li Yi </small></td>
+</tr>
+<tr>
+<td width="30%">11:40 &#8211; 12:10</td>
+<td> Model Inversion Attacks Against Collaborative Inference<br /> <small>Zhang Tianwei </small></td>
 </tr>
 </tbody>
 </table>
@@ -213,7 +217,7 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 </tr>
 <tr>
 <td width="30%">17:00 &#8211; 17:30</td>
-<td> Making resilient model- moving target defence<br /> <small>Levy Moshe </small></td>
+<td> Making resilient model- moving target defence<br /> <small>Moshe Levy </small></td>
 </tr>
 </tbody>
 </table>
