--- a/program.html
+++ b/program.html
@@ -117,8 +117,6 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 		<svg class="icon icon-bars" aria-hidden="true" role="img"> <use href="#icon-bars" xlink:href="#icon-bars"></use> </svg><svg class="icon icon-close" aria-hidden="true" role="img"> <use href="#icon-close" xlink:href="#icon-close"></use> </svg>Menu	</button>
 
 	<div class="menu-main-menu-container"><ul id="top-menu" class="menu"><li id="menu-item-27" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-27"><a href="https://ai-security-2019-program.github.io/index">AI Security 2019 Program</a></li>
-<li id="menu-item-26" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-26"><a href="https://ai-security-2019-program.github.io/committees">Committees</a></li>
-<li id="menu-item-32" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-32"><a href="https://ai-security-2019-program.github.io/speakers">Speakers</a></li>
 <li id="menu-item-213" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-192 current_page_item menu-item-213"><a href="program.html" aria-current="page">Program</a></li>
 </ul></div>
 	</nav><!-- #site-navigation -->
@@ -150,11 +148,11 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 </tr>
 <tr>
 <td width="30%">09:00 &#8211; 09:30</td>
-<td>Secure Deep Learning Engineering: A Road Towards Quality Assurance of Intelligent Systems <br /> <small>Liu Yang </small></td>
+<td>Secure Deep Learning Engineering: A Road Towards Quality Assurance of Intelligent Systems <br /> <small>Liu Yang (NTU)</small></td>
 </tr>
 <tr>
 <td width="30%">09:30 &#8211; 10:10</td>
-<td>Detecting Adversarial Perturbations Through Spatial Behavior in Activation Spaces. Why Blocking Targeted Adversarial Perturbations Impairs the Ability to Learn.<br /> <small>Yuval Elovici </small></td>
+<td>Detecting Adversarial Perturbations Through Spatial Behavior in Activation Spaces. Why Blocking Targeted Adversarial Perturbations Impairs the Ability to Learn.<br /> <small>Yuval Elovici (BGU)</small></td>
 </tr>
 </tbody>
 </table>
@@ -167,15 +165,15 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 </tr>
 <tr>
 <td width="30%">10:40 &#8211; 11:10</td>
-<td>Generic Black-Box End-to-End Attack Against State of the Art API Call Based Malware Classifiers <br /> <small>Ishai Rosenberg </small></td>
+<td>Generic Black-Box End-to-End Attack Against State of the Art API Call Based Malware Classifiers <br /> <small>Ishai Rosenberg (BGU)</small></td>
 </tr>
 <tr>
 <td width="30%">11:10 &#8211; 11:40</td>
-<td> Quantitative Analysis for Recurrent Neural Network<br /> <small>Li Yi </small></td>
+<td> Quantitative Analysis for Recurrent Neural Network<br /> <small>Li Yi (NTU)</small></td>
 </tr>
 <tr>
 <td width="30%">11:40 &#8211; 12:10</td>
-<td> Model Inversion Attacks Against Collaborative Inference<br /> <small>Zhang Tianwei </small></td>
+<td> Model Inversion Attacks Against Collaborative Inference<br /> <small>Zhang Tianwei (NTU)</small></td>
 </tr>
 </tbody>
 </table>
@@ -188,15 +186,15 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 </tr>
 <tr>
 <td width="30%">14:00 &#8211; 14:30</td>
-<td> Testing Deep Neural Networks in Development and Deployment Phases <br /> <small>Xie Xiaofei </small></td>
+<td> Testing Deep Neural Networks in Development and Deployment Phases <br /> <small>Xie Xiaofei (NTU)</small></td>
 </tr>
 <tr>
 <td width="30%">14:30 &#8211; 15:00</td>
-<td> When Explainability Meets Adversarial Learning: Detecting Adversarial Examples using SHAP Signatures <br /> <small>Shabtai Asaf </small></td>
+<td> When Explainability Meets Adversarial Learning: Detecting Adversarial Examples using SHAP Signatures <br /> <small>Shabtai Asaf (BGU)</small></td>
 </tr>
 <tr>
 <td width="30%">15:00 &#8211; 15:30</td>
-<td> Model-Based Robustness Analysis of Stateful Deep Learning Systems <br /> <small>Du Xiaoning </small></td>
+<td> Model-Based Robustness Analysis of Stateful Deep Learning Systems <br /> <small>Du Xiaoning (NTU)</small></td>
 </tr>
 </tbody>
 </table>
@@ -209,20 +207,18 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 </tr>
 <tr>
 <td width="30%">16:00 &#8211; 16:30</td>
-<td> FakeSpotter: A Simple Baseline for Spotting AI-Synthesized Fake Faces <br /> <small>Wang Run </small></td>
+<td> FakeSpotter: A Simple Baseline for Spotting AI-Synthesized Fake Faces <br /> <small>Wang Run (NTU)</small></td>
 </tr>
 <tr>
 <td width="30%">16:30 &#8211; 17:00</td>
-<td> Artificial Intelligence Attacks in the medical domain <br /> <small>Guy Amit </small></td>
+<td> Artificial Intelligence Attacks in the medical domain <br /> <small>Guy Amit (BGU)</small></td>
 </tr>
 <tr>
 <td width="30%">17:00 &#8211; 17:30</td>
-<td> Making resilient model- moving target defence<br /> <small>Moshe Levy </small></td>
+<td> Making resilient model- moving target defence<br /> <small>Moshe Levy (BGU)</small></td>
 </tr>
 </tbody>
 </table>
-<div style="width: 100%; margin-top: 2rem; margin-bottom: 2rem; font-weight: bold; color: #cccccc;">DINNER</div>
-	</div><!-- .entry-content -->
 </article><!-- #post-192 -->
 
 		</main><!-- #main -->
