--- a/program.html
+++ b/program.html
@@ -148,7 +148,7 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 </tr>
 <tr>
 <td width="30%">09:00 &#8211; 09:30</td>
-<td>Secure Deep Learning Engineering: A Road Towards Quality Assurance of Intelligent Systems <br /> <small>Liu Yang (NTU)</small></td>
+<td>Secure Deep Learning Engineering: A Road Towards Quality Assurance of Intelligent Systems <br /> <small>Liu Yang &nbsp;&nbsp;(NTU)</small></td>
 </tr>
 <tr>
 <td width="30%">09:30 &#8211; 10:10</td>
