--- a/program.html
+++ b/program.html
@@ -152,7 +152,7 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 </tr>
 <tr>
 <td width="30%">09:30 &#8211; 10:10</td>
-<td>Detecting Adversarial Perturbations Through Spatial Behavior in Activation Spaces. Why Blocking Targeted Adversarial Perturbations Impairs the Ability to Learn.<br /> <small>Yuval Elovici (BGU)</small></td>
+<td>Detecting Adversarial Perturbations Through Spatial Behavior in Activation Spaces. Why Blocking Targeted Adversarial Perturbations Impairs the Ability to Learn.<br /> <small>Yuval Elovici &nbsp;&nbsp;(BGU)</small></td>
 </tr>
 </tbody>
 </table>
@@ -165,15 +165,15 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 </tr>
 <tr>
 <td width="30%">10:40 &#8211; 11:10</td>
-<td>Generic Black-Box End-to-End Attack Against State of the Art API Call Based Malware Classifiers <br /> <small>Ishai Rosenberg (BGU)</small></td>
+<td>Generic Black-Box End-to-End Attack Against State of the Art API Call Based Malware Classifiers <br /> <small>Ishai Rosenberg &nbsp;&nbsp;(BGU)</small></td>
 </tr>
 <tr>
 <td width="30%">11:10 &#8211; 11:40</td>
-<td> Quantitative Analysis for Recurrent Neural Network<br /> <small>Li Yi (NTU)</small></td>
+<td> Quantitative Analysis for Recurrent Neural Network<br /> <small>Li Yi &nbsp;&nbsp;(NTU)</small></td>
 </tr>
 <tr>
 <td width="30%">11:40 &#8211; 12:10</td>
-<td> Model Inversion Attacks Against Collaborative Inference<br /> <small>Zhang Tianwei (NTU)</small></td>
+<td> Model Inversion Attacks Against Collaborative Inference<br /> <small>Zhang Tianwei &nbsp;&nbsp;(NTU)</small></td>
 </tr>
 </tbody>
 </table>
@@ -186,15 +186,15 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 </tr>
 <tr>
 <td width="30%">14:00 &#8211; 14:30</td>
-<td> Testing Deep Neural Networks in Development and Deployment Phases <br /> <small>Xie Xiaofei (NTU)</small></td>
+<td> Testing Deep Neural Networks in Development and Deployment Phases <br /> <small>Xie Xiaofei &nbsp;&nbsp;(NTU)</small></td>
 </tr>
 <tr>
 <td width="30%">14:30 &#8211; 15:00</td>
-<td> When Explainability Meets Adversarial Learning: Detecting Adversarial Examples using SHAP Signatures <br /> <small>Shabtai Asaf (BGU)</small></td>
+<td> When Explainability Meets Adversarial Learning: Detecting Adversarial Examples using SHAP Signatures <br /> <small>Shabtai Asaf &nbsp;&nbsp;(BGU)</small></td>
 </tr>
 <tr>
 <td width="30%">15:00 &#8211; 15:30</td>
-<td> Model-Based Robustness Analysis of Stateful Deep Learning Systems <br /> <small>Du Xiaoning (NTU)</small></td>
+<td> Model-Based Robustness Analysis of Stateful Deep Learning Systems <br /> <small>Du Xiaoning &nbsp;&nbsp;(NTU)</small></td>
 </tr>
 </tbody>
 </table>
@@ -207,15 +207,15 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 </tr>
 <tr>
 <td width="30%">16:00 &#8211; 16:30</td>
-<td> FakeSpotter: A Simple Baseline for Spotting AI-Synthesized Fake Faces <br /> <small>Wang Run (NTU)</small></td>
+<td> FakeSpotter: A Simple Baseline for Spotting AI-Synthesized Fake Faces <br /> <small>Wang Run &nbsp;&nbsp;(NTU)</small></td>
 </tr>
 <tr>
 <td width="30%">16:30 &#8211; 17:00</td>
-<td> Artificial Intelligence Attacks in the medical domain <br /> <small>Guy Amit (BGU)</small></td>
+<td> Artificial Intelligence Attacks in the medical domain <br /> <small>Guy Amit &nbsp;&nbsp;(BGU)</small></td>
 </tr>
 <tr>
 <td width="30%">17:00 &#8211; 17:30</td>
-<td> Making resilient model- moving target defence<br /> <small>Moshe Levy (BGU)</small></td>
+<td> Making resilient model- moving target defence<br /> <small>Moshe Levy &nbsp;&nbsp;(BGU)</small></td>
 </tr>
 </tbody>
 </table>
