--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@ var ajax_object_cf7pp = {"ajax_url":"https:\/\/www.pvcs2019.org\/wp-admin\/admin
 
 <p>09:00 am &#8211; 17:30 pm,</p>
 <p>17 October 2019,</p>
-<p>ABN01a-CF2, Academic Building North,</p>
+<p>TR-04, The Arc,</p>
 <p>61 Nanyang Drive, Singapore 637335,</p>
 <p>Nanyang Technological University</p>
-<p><iframe style="border: 0;" src= "https://www.google.com/maps/d/u/0/embed?mid=1vTtzYZpv6J4ZakrNoK1chYJCIoDzit3l" width="600" height="450" frameborder="0" allowfullscreen="allowfullscreen"></iframe></p>
+<p><iframe style="border: 0;" src= "https://www.google.com/maps/d/u/2/embed?mid=1vemPGUdbRN5sXNbFINR8940-qTVZLi1F" width="600" height="450" frameborder="0" allowfullscreen="allowfullscreen"></iframe></p>
 <!--ckj-->
 
 
